[feature] 이메일 인증 추가
